@@ -1,5 +1,12 @@
 2014-08-28  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* final.c: Include rtl-iter.h.
+	(mark_symbol_ref_as_used): Delete.
+	(mark_symbol_refs_as_used): Use FOR_EACH_SUBRTX instead of
+	for_each_rtx.
+
+2014-08-28  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* emit-rtl.c: Include rtl-iter.h.
 	(find_auto_inc): Turn from being a for_each_rtx callback to being
 	a function that examines each subrtx itself.  Assume the first operand
